force-app/main/default/objects/Idea_Space__c/Idea_Space__c.object-meta.xml
<CustomObject>
    <label>Idea Space</label>
    <nameField>
        <label>Idea Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Spaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>