force-app/main/default/objects/Idea_Space__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Idea Spaces</relationshipLabel>
    <relationshipName>Idea_Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>