force-app/main/default/objects/Idea_Space__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>